[gd_scene load_steps=3 format=3 uid="uid://vn4t2on81jyn"]

[ext_resource type="Script" uid="uid://bi6virjaptjje" path="res://login_screen.gd" id="1_wtcfe"]
[ext_resource type="Script" uid="uid://7t77hnmqhmbc" path="res://initial.gd" id="2_0e48y"]

[node name="Main" type="Node2D"]
position = Vector2(2, 5)

[node name="LoginScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_wtcfe")

[node name="CenterContainer" type="CenterContainer" parent="LoginScreen"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="LoginScreen/CenterContainer"]
layout_mode = 2

[node name="UsernameInput" type="LineEdit" parent="LoginScreen/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
placeholder_text = "Enter Username"

[node name="PasswordInput" type="LineEdit" parent="LoginScreen/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
placeholder_text = "Enter Password"
secret = true

[node name="LoginButton" type="Button" parent="LoginScreen/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Login"

[node name="Label" type="Label" parent="LoginScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Hello Android !"

[node name="node" type="Node" parent="LoginScreen"]
script = ExtResource("2_0e48y")
